# leo-viz

./: .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE  README.md  build.rs  index.html  todo.md
.Codex/plans/: code-quality.md  mobile-support.md
.cargo/: config.toml
.claude/skills/screenshot-test/: SKILL.md
.github/workflows/: deploy.yml
assets/tle/: oneweb.tle  starlink.tle
dist-wasm/: index.html  leo-viz-eb2f90ced47e6df6.js
example-rust-egui/: Cargo.toml
example-rust-egui/src/: main.rs
scripts/: convert-pdf-slides-to-png.sh  convert-pdf-slides-to-svg.sh
src/: aep8.rs  aep8_data.rs  app.rs  bridge.rs  bridge_publisher.rs  bridge_server.rs  celestial.rs  cfs.rs  config.rs  conjunction.rs  demo.rs  drawing.rs  geo.rs  igrf.rs  kessler.rs  main.rs  math.rs  pass.rs  physics.rs  projection.rs  radiation.rs  renderer.rs  settings.rs  slides.rs  solar_system.rs  spacecomp.rs  texture.rs  tile.rs  time.rs  tle.rs  viewer.rs  walker.rs
textures/Earth16K/: Earth_Clouds_16k.tif
