[package]
name = "leo-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.33"
egui_plot = "0.34"
nalgebra = "0.33"
image = "0.25"
log = "0.4"
sgp4 = "2.3"
chrono = { version = "0.4", features = ["wasmbind"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
ureq = "2.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "web_screen_reader",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Response", "Request", "RequestInit", "RequestMode"] }

[profile.release]
opt-level = 2

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
