[package]
name = "leo-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui = "0.33"
egui-wgpu = "0.33"
egui_dock = "0.18"
egui_extras = { version = "0.33", default-features = false, features = ["image", "svg"] }
egui_plot = "0.34"
resvg = { version = "0.45.1", default-features = false, features = ["raster-images"] }
nalgebra = "0.33"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
log = "0.4"
sgp4 = "2.3"
chrono = { version = "0.4", features = ["wasmbind"] }
web-time = "1.1.0"
bytemuck = { version = "1", features = ["derive"] }
indoc = "2.0.7"
zerocopy = { version = "0.8", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
ureq = "2.9"
ctrlc = "3.4"
leodos-lib42 = { path = "../LeoDOS/crates/leodos-lib42" }
leodos-bridge = { path = "../LeoDOS/crates/leodos-bridge" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "web_screen_reader",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location", "History", "Response", "Request", "RequestInit", "RequestMode"] }

[patch.crates-io]
emath = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
ecolor = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
epaint = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
epaint_default_fonts = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
egui = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
egui-winit = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
egui-wgpu = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
eframe = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }
egui_extras = { git = "https://github.com/segeljakt/egui.git", branch = "fix/feathering-sharp-corners" }

[profile.release]
opt-level = 2

[profile.release-wasm]
inherits = "release"
opt-level = 2
lto = true
codegen-units = 1
strip = true
